# ics-anomaly-detection

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  PROJECT_PLAN.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: README.md  __init__.py  main.py  routes.py  schemas.py
app/static/: app.js  index.html  style.css
data/: README.md  feature_types.yaml
data/feature_types_variants/: morris_gas_final.yaml
experiments/: run.py  run_attribution.py  run_lopo.py  run_transfer.py
experiments/configs/: baseline_hai_dense_ae.yaml  baseline_hai_isolation_forest.yaml  baseline_hai_lstm_ae.yaml  baseline_hai_ocsvm.yaml  baseline_morris_dense_ae.yaml  baseline_morris_isolation_forest.yaml  baseline_morris_lstm_ae.yaml  baseline_morris_ocsvm.yaml  (+40 more)
notebooks/: 01_data_exploration.ipynb  02_preprocessing.ipynb  02_preprocessing_sanity.ipynb  03_baseline_results.ipynb  03_classical_models.ipynb  04_deep_models.ipynb  04_sota_results.ipynb  05_cross_dataset.ipynb  05_results_comparison.ipynb  06_metric_sensitivity.ipynb  07_attribution.ipynb
scripts/: score_external.py
src/: __init__.py  config.py  data_loader.py  evaluation.py  preprocessing.py  utils.py
tests/: test_app_smoke.py  test_attribution.py  test_data_loader.py  test_evaluation.py  test_inference_pipeline.py  test_models_smoke.py  test_morris_adapter.py  test_persistence.py  test_phase_b.py  test_phase_c.py  test_preprocessing.py  test_transfer.py
thesis/: README.md  build.sh  main.tex  outline.md  preamble.tex  references.bib
tools/: build_notebooks.py  make_thin_notebooks.py
(+58 files in other folders)
