[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ics-anomaly-detection"
version = "0.1.0"
description = "ICS anomaly detection for cyber-physical security (undergraduate thesis)."
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "experiments*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pyflakes + pycodestyle
    "I",                # isort
    "UP",               # pyupgrade
    "B",                # bugbear
    "SIM",              # simplify
    "RUF",              # ruff-specific
]
ignore = [
    "E501",             # line length handled by formatter
    "B008",             # function call in argument defaults (common in configs)
]

[tool.ruff.lint.per-file-ignores]
"notebooks/*" = ["E402", "F401"]
"tests/*" = ["F401", "F811"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: tests that touch real datasets (skip by default in CI)",
    "gpu: tests that require CUDA",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
]

[tool.mypy]
python_version = "3.10"
strict_optional = true
warn_unused_ignores = true
ignore_missing_imports = true
